--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,14 @@
   font-family: 'Arial', sans-serif;
 }
 
-body {
+html,body {
   background-color: #f7f7f7;
   font-size: 16px;
   color: #333;
   line-height: 1.6;
+  overflow-x: hidden;
+  width: 100%;
+ 
 }
 
 /* Navbar styles */
